translation-tool/inputs/source_meta/objects/Brazil_Vendor__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>vendor Information</description>
    <fields>
        <fullName>Brazil_VendorName__c</fullName>
        <label>Brazil_VendorName</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Brazil_VendorState__c</fullName>
        <label>Brazil_VendorState</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brazil_VendorStreet__c</fullName>
        <label>Brazil_VendorStreet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Brazil_Vendor</label>
</CustomObject>